--- a/views/elephant.erb
+++ b/views/elephant.erb
@@ -1,4 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Dice Roll Home</title>
+</head>
+<body>
 <h1>Dice Roll</h1>
 
 <ul>
@@ -7,4 +12,5 @@
   <li><a href="/dice/1/20">Roll one 20-sided die</a></li>
   <li><a href="/dice/5/4">Roll five 4-sided dice</a></li>
 </ul>
-
+</body>
+</html>
