--- a/views/one_twenty.erb
+++ b/views/one_twenty.erb
@@ -1,4 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Dice Roll One 20-Sided</title>
+</head>
+<body>
 <h1>1d20</h1>
 
 <p><%= @outcome %></p>
+</body>
+</html>
