--- a/views/two_ten.erb
+++ b/views/two_ten.erb
@@ -1,4 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Dice Roll Two 10-Sided</title>
+</head>
+<body>
 <h1>2d10</h1>
 
 <p><%= @outcome %></p>
+</body>
+</html>
