--- a/views/one_twenty.erb
+++ b/views/one_twenty.erb
@@ -6,6 +6,11 @@
 <body>
 <h1>1d20</h1>
 
-<p><%= @outcome %></p>
+<% if @first_die == 1 %>
+  <p style="color:red"><%= @outcome %></p>
+<% elsif @first_die == 20 %>
+  <p style="color:green"><%= @outcome %></p>
+<% else %>
+  <p style="color:black"><%= @outcome %></p>
 </body>
 </html>
